# lexon

./: .gitignore  README.md  pyproject.toml  setup.cfg  test.py
lexon/: __init__.py  __main__.py  command.py
