[metadata]
name = lexon
version = 0.0.0
author = Robert Lawrence DeForrest Renolds
description = Utility for handling argument parsing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Robert-DeForrest-Reynolds/lexon
classifiers = 
    Programming Language :: Python :: 3
    "Intended Audience :: Developers",
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3

[options.packages.find]
where = .

